--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.min.css">
 	</head>
 	<body>
 		<header class="main-header">
@@ -21,48 +21,39 @@
 					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 				<ul class="basket-link">
-					<li><a class="basket" href="#">Корзина</a></li> 
+					<li class="basket"><a href="#">Корзина</a></li> 
 				</ul>
 			</nav>
 		</header>
 		<main class="container">
 			<h1 class="visually-hidden">Cтудия дизайна Nerds</h1>	
-
-			<section class="sliders">
-				<h2 class="visually-hidden">Слайдер</h2>
-				<ul class="sliders-list">
-					<li class="slider-colums slider1">
-						<div class="slider-img">
-							<img src="img/slide1.png" width="698" height="413" alt="Два телефона">
-						</div>
-						<div class="slider-left">
+			<section class="slider">
+				<div class="container-slider">
+					<h2 class="visually-hidden">Преимущества</h2>
+					<div class="slider-controls">
+						<i class="active"></i>
+						<i></i>
+						<i></i>
+					</div>
+					<ul class="slider-list">
+						<li class="slider-item">
 							<h3>Долго, дорого, скрупулезно.</h3>
 							<p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
 							<a class="button button-slider" href="#">Узнать больше</a>
-						</div>
-					</li>
-					<li class="slider-colums slider2 visually-hidden">
-						<div class="slider-img">
-							<img src="img/slide2.png" width="698" height="413" alt="Два компьютера">
-						</div>
-						<div class="slider-left">	
+						</li>
+						<li class="slider-item">
 							<h3>Любим математику как никто другой</h3>
 							<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-							<a class="button button-slider" href="catalog.html">Узнать больше</a>
-						</div>
-					</li>
-					<li class="slider-colums slider3  visually-hidden">
-						<div class="slider-img">
-							<img src="img/slide3.png" width="698" height="413" alt="Планшет и телефон">
-						</div>
-						<div class="slider-left">
-							<h3>Только ночь, только хардкор</h3>
-							<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-							<a class="button button-slider" href="catalog.html">Узнать больше</a>
-						</div>
-					</li>
-				</ul>
-			</section> 
+							<a class="button button-slider" href="catalog.html">Узнать больше</a>							
+						</li>
+						<li class="slider-item">
+							<h3>Только ночь,<br> только хардкор</h3>
+							<p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+							<a class="button button-slider" href="catalog.html">Узнать больше</a>							
+						</li>					
+					</ul>
+				</div>	
+			</section>
 			<section class="services">
 				<h2 class="visually-hidden">Виды работ</h2>
 				<ul class="services-list">
@@ -145,8 +136,11 @@
 		</main>
 		<footer class="main-footer">
 			<div class="map">
-				<h2 class="visually-hidden">Карта</h2>
-				<img class="map-picture" src="img/map.jpg" width="1440" height="416" alt="Карта">
+				<h2 class="visually-hidden">Карта</h2>			
+				<iframe 
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651568!2d30.320894615867413!3d59.938794181876276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sby!4v1522775596732" width="1440" height="416"  style="border:0" allowfullscreen>
+				</iframe>
+				<img class="map-picture" src="img/map.jpg" width="1440" height="416" alt="Карта">				
 			</div>			
 			<div class="contacts">
 				<h2 class="visually-hidden">Контакты</h2>
@@ -161,15 +155,18 @@
 					<ul class="social-type">
 						<li>
 							<a class="button-social" href="#">
+								<span class="visually-hidden">Вконтакте</span>
 								<img class="button-vk" src="img/vk-icon.svg" alt="Вконтакте" width="26" height="15">
 							</a>
 						</li>
 						<li>
+							<span class="visually-hidden">Фейсбук</span>
 							<a class="button-social" href="#">
 								<img class="button-facebook" src="img/fb-icon.svg" alt="Фейсбук" width="12" height="22">
 							</a>
 						</li>
 						<li>
+							<span class="visually-hidden">Инстаграм</span>							
 							<a class="button-social" href="#">
 								<img class="button-instagram" src="img/insta-icon.svg" alt="Инстаграм" width="21" height="21">
 							</a>
@@ -203,6 +200,7 @@
 			</form>			
 			<button class="feedback-close" type="button">Закрыть</button>
 		</section>
+		<script src="js/popap.js"></script>
 	</body>
 </html>
 
