--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 			<section class="slider">
 				<div class="container-slider">
 					<h2 class="visually-hidden">Преимущества</h2>
+					<input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+					<input class="visually-hidden" type="radio" id="product-2" name="toggle" checked>
+					<input class="visually-hidden" type="radio" id="product-3" name="toggle" checked>
 					<div class="slider-controls">
-						<i class="active"></i>
-						<i></i>
-						<i></i>
-					</div>
+          				<label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+          				<label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+          				<label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
+        			</div>
 					<ul class="slider-list">
 						<li class="slider-item">
 							<h3>Долго, дорого, скрупулезно.</h3>
