--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Каталог Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/normalize.min.css">
 		<link rel="stylesheet" href="css/style.min.css">
 	</head>
 	<body>
