--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/normalize.min.css">
 		<link rel="stylesheet" href="css/style.min.css">
 	</head>
 	<body>
@@ -31,8 +31,8 @@
 				<div class="container-slider">
 					<h2 class="visually-hidden">Преимущества</h2>
 					<input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-					<input class="visually-hidden" type="radio" id="product-2" name="toggle" checked>
-					<input class="visually-hidden" type="radio" id="product-3" name="toggle" checked>
+					<input class="visually-hidden" type="radio" id="product-2" name="toggle">
+					<input class="visually-hidden" type="radio" id="product-3" name="toggle">
 					<div class="slider-controls">
           				<label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
           				<label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
@@ -203,7 +203,6 @@
 			</form>			
 			<button class="feedback-close" type="button">Закрыть</button>
 		</section>
-		<script src="js/popap.js"></script>
 	</body>
 </html>
 
