--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 					<input class="visually-hidden" type="radio" id="product-2" name="toggle">
 					<input class="visually-hidden" type="radio" id="product-3" name="toggle">
 					<div class="slider-controls">
-          				<label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
-          				<label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
-          				<label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
-        			</div>
+						<label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+						<label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+						<label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
+					</div>
 					<ul class="slider-list">
 						<li class="slider-item">
 							<h3>Долго, дорого, скрупулезно.</h3>
@@ -151,7 +151,7 @@
 				<p>191186, Санкт-Петербург,<br>
 				ул. Б. Конюшенная, д. 19/8</p>
 				<p>тел. +7 (812) 275-75-75</p>
-				<a class="button-letter" href="#">Напишите нам</a>
+				<a class="button-letter" href="writetous.html">Напишите нам</a>
 			</div>
 			<div class="footer-colums">
 				<div class="footer-social">
@@ -188,7 +188,7 @@
 				<div class="feedback-colums">
 					<p>
 						<label class="label-name" for="user-name">Ваше имя:</label>
-						<input class="field-name" id="user-name" name="name" type="text" placeholder="Имя Фамилия">
+						<input class="field-name" id="user-name" name="usernamefield" type="text" placeholder="Имя Фамилия">
 					</p>
 					<p>
 						<label for="user-email">Ваш e-mail:</label>
@@ -203,6 +203,7 @@
 			</form>			
 			<button class="feedback-close" type="button">Закрыть</button>
 		</section>
+		<script src="js/popap.min.js"></script>
 	</body>
 </html>
 
